--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         body: JSON.stringify(data)
       });
 
-      document.getElementById("successMessage").innerText = "บันทึกเรียบร้อยแล้ว กรุณารอการติดต่อกลับจากเจ้าหน้าที่ภายหลัง";
+      document.getElementById("successMessage").innerText = "ขอบคุณที่เข้ามาอยู่ในครอบครัว JOKJUNGน่ะครับ";
 
       // ล้างฟอร์ม
       document.querySelectorAll("input, textarea").forEach(input => input.value = "");
